# 07_taotie

./: Cargo.toml  README.md  deny.toml
assets/: person.csv  user.json
examples/: arrow-builders.rs  arrow-collect.rs  arrow-dynamic_types.rs  arrow-read-csv-infer-schema.rs  arrow-read-csv.rs  arrow-serde.rs  ndjson.rs  pq.rs  read-pq.rs
notebooks/: README.md  pyproject.toml  taotie.ipynb
src/: lib.rs  main.rs
src/backend/: data_fusion.rs
src/backend/fusion/: describe.rs  mod.rs
src/cli/: connect.rs  describe.rs  head.rs  list.rs  mod.rs  schema.rs  sql.rs
