[package]
name = "taotie"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
arrow = { version = "54.1.0", features = ["prettyprint"] }
chrono = { version = "0.4.39", features = ["clock", "serde"] }
clap = { version = "4.5.28", features = ["derive"] }
crossbeam-channel = "0.5.14"
datafusion = { version = "44.0.0", features = ["serde"] }
dirs = "6.0.0"
parquet = "54.1.0"
polars = { version = "0.46.0", features = [
  "lazy",
  "parquet",
  "timezones",
  "sql",
] }
reedline-repl-rs = { version = "1.2.1", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
